crates/skills-cli/tests/snapshots/e2e_bin__bin_show_after_update.snap
---
source: crates/skills-cli/tests/e2e_bin.rs
expression: out
---
Target: .agents/skills

dir/skills-src [declared in skills.json]:
  code-review  Reviews code changes before commit  [ok]
  docs-helper  Writes documentation                [ok]
  plain        -                                   [ok]
