crates/skills-cli/tests/snapshots/e2e_bin__bin_show_before_update.snap
---
source: crates/skills-cli/tests/e2e_bin.rs
expression: out
---
Target: .agents/skills

dir/skills-src [declared in skills.json]:
  code-review  Reviews code changes before commit  not-synced
  docs-helper  Writes documentation                not-synced
  plain        -                                   not-synced
