crates/skills-cli/tests/snapshots/e2e_bin__bin_update_alias_stdout.snap
---
source: crates/skills-cli/tests/e2e_bin.rs
expression: out
---
Syncing skills into .agents/skills

dir/skills-src:
  [add]  code-review (copied 3 files)
  [add]  docs-helper (copied 1 file)
  [add]  plain (copied 1 file)

3 added, 0 updated, 0 removed, 0 up to date.

Aliases:
  [link]       .claude/skills -> .agents/skills (created)
  [link]       .cursor/skills -> .agents/skills (created)
